# dsnet2

./: .clang-format  .gitignore  CMakeLists.txt  README
cmake/: BuildDep.cmake
include/: cmd.h  deci2.h  list.h  misc.h
src/: CMakeLists.txt  cmd.c  dsnetm.c  main.c  misc.c
